content/consul/v1.8.x/content/commands/operator/autopilot.mdx
---
layout: commands
page_title: 'Commands: Operator Autopilot'
sidebar_title: autopilot
description: >
  The operator autopilot subcommand is used to view and modify Consul's
  Autopilot configuration.
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2025-11-04T10:42:51-06:00
last_modified: 2025-11-04T10:42:51-06:00
# END AUTO GENERATED METADATA
---

# Consul Operator Autopilot

Command: `consul operator autopilot`

The Autopilot operator command is used to interact with Consul's Autopilot subsystem. The
command can be used to view or modify the current Autopilot configuration. See the
[Autopilot Guide](https://learn.hashicorp.com/consul/day-2-operations/autopilot) for more information about Autopilot.

```text
Usage: consul operator autopilot <subcommand> [options]

The Autopilot operator command is used to interact with Consul's Autopilot
subsystem. The command can be used to view or modify the current configuration.

Subcommands:

    get-config    Display the current Autopilot configuration
    set-config    Modify the current Autopilot configuration
```

## get-config

This command displays the current Raft peer configuration.

Usage: `consul operator autopilot get-config [options]`

#### API Options

@include 'http_api_options_client.mdx'

@include 'http_api_options_server.mdx'

The output looks like this:

```
CleanupDeadServers = true
LastContactThreshold = 200ms
MaxTrailingLogs = 250
ServerStabilizationTime = 10s
RedundancyZoneTag = ""
DisableUpgradeMigration = false
UpgradeMigrationTag = ""
```

## set-config

Modifies the current Autopilot configuration.

Usage: `consul operator autopilot set-config [options]`

#### API Options

@include 'http_api_options_client.mdx'

@include 'http_api_options_server.mdx'

#### Command Options

- `-cleanup-dead-servers` - Specifies whether to enable automatic removal of dead servers
  upon the successful joining of new servers to the cluster. Must be one of `[true|false]`.

- `-last-contact-threshold` - Controls the maximum amount of time a server can go without contact
  from the leader before being considered unhealthy. Must be a duration value such as `200ms`.

- `-max-trailing-logs` - Controls the maximum number of log entries that a server can trail
  the leader by before being considered unhealthy.

- `-min-quorum` - Sets the minimum number of servers required in a cluster
  before autopilot is allowed to prune dead servers.

- `-server-stabilization-time` - Controls the minimum amount of time a server must be stable in
  the 'healthy' state before being added to the cluster. Only takes effect if all servers are
  running Raft protocol version 3 or higher. Must be a duration value such as `10s`.

- `-disable-upgrade-migration` <EnterpriseAlert inline /> - Controls whether Consul will avoid promoting
  new servers until it can perform a migration. Must be one of `[true|false]`.

- `-redundancy-zone-tag` <EnterpriseAlert inline /> - Controls the [`-node-meta`](/docs/agent/options#_node_meta)
  key name used for separating servers into different redundancy zones.

- `-upgrade-version-tag` <EnterpriseAlert inline /> - Controls the [`-node-meta`](/docs/agent/options#_node_meta)
  tag to use for version info when performing upgrade migrations. If left blank, the Consul version will be used.

The output looks like this:

```
Configuration updated!
```

The return code will indicate success or failure.
